--- a/package.json
+++ b/package.json
@@ -7,13 +7,14 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
+    "@neondatabase/serverless": "^0.10.4",
     "@tailwindcss/forms": "^0.5.10",
     "autoprefixer": "10.4.20",
     "bcrypt": "^5.1.1",
     "clsx": "^2.1.1",
     "next": "^15.1.7",
     "next-auth": "5.0.0-beta.25",
-    "postcss": "8.5.1",
+    "postcss": "8.5.2",
     "postgres": "^3.4.5",
     "prettier": "^3.5.1",
     "react": "^19.0.0",
@@ -21,12 +22,18 @@
     "tailwindcss": "3.4.17",
     "typescript": "5.7.3",
     "use-debounce": "^10.0.4",
+    "uuid": "^11.0.5",
     "zod": "^3.24.2"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/node": "22.13.4",
-    "@types/react": "19.0.9",
-    "@types/react-dom": "19.0.3"
+    "@types/react": "19.0.10",
+    "@types/react-dom": "19.0.4"
+  },
+  "pnpm": {
+    "onlyBuiltDependencies": [
+      "bcrypt"
+    ]
   }
 }
