--- a/package.json
+++ b/package.json
@@ -12,13 +12,14 @@
     "autoprefixer": "10.4.20",
     "bcrypt": "^5.1.1",
     "clsx": "^2.1.1",
-    "next": "^15.1.7",
+    "next": "15.2.0-canary.64",
     "next-auth": "5.0.0-beta.25",
     "postcss": "8.5.2",
     "postgres": "^3.4.5",
     "prettier": "^3.5.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "server-only": "^0.0.1",
     "tailwindcss": "3.4.17",
     "typescript": "5.7.3",
     "use-debounce": "^10.0.4",
