--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
     "@neondatabase/serverless": "^0.10.4",
     "@tailwindcss/forms": "^0.5.10",
     "autoprefixer": "10.4.20",
+    "babel-plugin-react-compiler": "19.0.0-beta-21e868a-20250216",
     "bcrypt": "^5.1.1",
     "clsx": "^2.1.1",
-    "next": "15.2.0-canary.65",
+    "next": "15.2.0-canary.66",
     "next-auth": "5.0.0-beta.25",
     "postcss": "8.5.3",
     "postgres": "^3.4.5",
