--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
     "@heroicons/react": "^2.2.0",
     "@neondatabase/serverless": "^0.10.4",
     "@tailwindcss/forms": "^0.5.10",
+    "@tailwindcss/postcss": "^4.0.7",
     "autoprefixer": "10.4.20",
-    "babel-plugin-react-compiler": "19.0.0-beta-21e868a-20250216",
     "bcrypt": "^5.1.1",
     "clsx": "^2.1.1",
-    "next": "15.2.0-canary.66",
+    "next": "15.1.7",
     "next-auth": "5.0.0-beta.25",
     "postcss": "8.5.3",
     "postgres": "^3.4.5",
@@ -21,7 +21,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "server-only": "^0.0.1",
-    "tailwindcss": "3.4.17",
+    "tailwindcss": "4.0.7",
     "typescript": "5.7.3",
     "use-debounce": "^10.0.4",
     "uuid": "^11.1.0",
@@ -35,7 +35,8 @@
   },
   "pnpm": {
     "onlyBuiltDependencies": [
-      "bcrypt"
+      "bcrypt",
+      "sharp"
     ]
   }
 }
